# Studying_Practice_3_sem_4_task

./: CMakeLists.txt  Default_input_output_file_student.txt  Default_input_output_file_worker.txt
AdminMenu/: AdminMain.cpp  AdminMenu.cpp  AdminMenu.h  CMakeLists.txt
Dormitory/: CMakeLists.txt  File_Management.cpp  File_Management.h  Person.cpp  Person.h  Student.cpp  Student.h  Worker.cpp  Worker.h
Dormitory/A_Vectors/: A_Container.h  A_Student_Container.h  A_Student_Vector.h  A_TVector.h  A_Worker_Container.h  A_Worker_Vector.h
Dormitory/Factories/: A_Container_Factory.h  A_Vector_Factory.h  Factory_Provider.cpp  Factory_Provider.h  Flyweight_Map_Factory.cpp  Flyweight_Map_Factory.h  Inheritance_Vector_Factory.cpp  Inheritance_Vector_Factory.h  Template_Vector_Factory.cpp  Template_Vector_Factory.h  Vector_Factory_Provider.cpp  Vector_Factory_Provider.h
Dormitory/Flyweight_Map/: Student_Map.cpp  Student_Map.h  Worker_Map.cpp  Worker_Map.h
Dormitory/Inheritance_Vectors/: Person_Vector.cpp  Person_Vector.h  Student_Vector.cpp  Student_Vector.h  Worker_Vector.cpp  Worker_Vector.h
Dormitory/Template_Vectors/: T_Vector.h  T_Vector_Student.cpp  T_Vector_Student.h  T_Vector_Worker.cpp  T_Vector_Worker.h
Dormitory/Validators/: Validator.h
UserMenu/: CMakeLists.txt  UserMain.cpp  UserMenu.cpp  UserMenu.h
